feat: add check if email is already registered in google sheets